# Cadastro-alunos

./: .env  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
code/: main.py
code/lib/database/: __init__.py
code/lib/interface/: __init__.py
code/lib/login/: __init__.py
code/lib/login/auth/: __init__.py
code/lib/login/tokens/: __init__.py
lib/classes/: __init__.py
lib/database/: __init__.py
lib/inputs/: __init__.py
lib/interface/: __init__.py
